apps/miniflux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: miniflux-data-claim
      securityContext:
        runAsUser: 8080
        runAsGroup: 8080
      containers:
      - name: app
        image: ghcr.io/miniflux/miniflux:latest@sha256:49d7b60987616387c306a8023087b31f2c9b7b21288b523026cb04058e8b6dbb
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /readiness
            port: 8080
          failureThreshold: 12  # 12 * 10s = 2 minutes startup leeway
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
      - name: db
        image: postgres:18@sha256:fc973eb97c9fd04bfa1840e0f510719a584ccb3be8debfe6a4144637a9dfe8cf
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql
