apps/miniflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: miniflux
  ports:
  - port: 80
    targetPort: 8080
